Added mappers for farmer listings and buyer requests, few other fixes